# gtest-example

./: CMakeLists.txt  Readme.md
src/: cvtColor.cpp  cvtColor.h
test/: test.cpp
